WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50101
[GTK] SoupCache should not ignore loader's conditional requests
https://bugs.webkit.org/show_bug.cgi?id=50101
Summary
[GTK] SoupCache should not ignore loader's conditional requests
Sergio Villar Senin
Reported
2010-11-26 02:02:55 PST
WebKit's resource loader cache does issue its own conditional requests for the resources it caches. SoupCache must not handle those conditional requests internally and should return the response to the message "as is", i.e., it should not return the cached response if any. This is causing loading issues when using the cache.
Attachments
Fix for the bug
(2.54 KB, patch)
2010-11-26 06:58 PST
,
Sergio Villar Senin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2010-11-26 06:58:27 PST
Created
attachment 74935
[details]
Fix for the bug SoupCache will no longer "hijack" a conditional request started by a client
Xan Lopez
Comment 2
2010-11-26 08:09:02 PST
Comment on
attachment 74935
[details]
Fix for the bug Looks good!
WebKit Commit Bot
Comment 3
2010-11-26 08:43:02 PST
The commit-queue encountered the following flaky tests while processing
attachment 74935
[details]
: fast/dom/DOMImplementation/createHTMLDocument-title.html Please file bugs against the tests. These tests were authored by
ap@webkit.org
. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 4
2010-11-26 08:44:32 PST
Comment on
attachment 74935
[details]
Fix for the bug Clearing flags on attachment: 74935 Committed
r72768
: <
http://trac.webkit.org/changeset/72768
>
WebKit Commit Bot
Comment 5
2010-11-26 08:44:38 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug