2010-11-26  Sergio Villar Senin  <svillar@igalia.com>

Reviewed by Xan Lopez.

        [GTK] SoupCache should not ignore loader's conditional requests
        https://bugs.webkit.org/show_bug.cgi?id=50101

        SoupCache must not handle WebKit loader conditional requests and
        thus should never return its own cached response if any. This was
        causing frequent resource load failures as WebCore was trying to
        revalidate its own resources and was not getting any expected
        result.

        * platform/network/soup/cache/webkit/soup-cache.c:
        (webkit_soup_cache_has_response): check the presence of
        conditional request headers when deciding whether the cache has a
        valid response for a given request.

Canonical link: https://commits.webkit.org/63227@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72768 268f45cc-cd09-0410-ab3c-d52691b4dbfc